[package]
name = "gemini-codemaker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
log = "0.4.26"
env_logger = "0.11.7"
regex = "1.11.1"
